# Intermediary-Refueling-Analysis

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Engine.cpp  Engine.h  Handler.cpp  Handler.h  README.md  Ship.cpp  Ship.h  ShipWrapper.cpp  ShipWrapper.h  SpaceShip.cpp  SpaceShip.h  SpaceShipHandler.cpp  SpaceShipHandler.h  SpaceShipWrapper.cpp  SpaceShipWrapper.h  Stage.cpp  Stage.h  Tester.cpp  Window.cpp  build.sh  ira-mpfr.h  main.cpp  mpfr-handler.h  mpfr-interface.h  paper.tex
.github/workflows/: codeql.yml
docs/html/: annotated.html  classSpaceShip-members.html  classSpaceShip.html  classes.html  functions.html  functions_func.html  functions_vars.html  index.html  structEngine-members.html  structEngine.html  structStage-members.html  structStage.html
docs/html/search/: all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js  variables_6.js
docs/latex/: annotated.tex  classSpaceShip.tex  refman.tex  structEngine.tex  structStage.tex
gui/: EngineCreator.cpp  EngineCreator.h  EngineList.cpp  EngineList.h  ShipCreator.cpp  ShipCreator.h  ShipList.cpp  ShipList.h  StageCreator.cpp  StageCreator.h  Window.h  lib.h
mac/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  tests  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
mac/gui/: moc_EngineCreator.cpp  moc_EngineCreator.cpp_parameters  moc_EngineList.cpp  moc_EngineList.cpp_parameters  moc_ShipCreator.cpp  moc_ShipCreator.cpp_parameters  moc_ShipList.cpp  moc_ShipList.cpp_parameters  moc_StageCreator.cpp  moc_StageCreator.cpp_parameters  moc_Window.cpp_parameters  moc_lib.cpp_parameters
mac/lib/Catch2/: cmake_install.cmake
mac/lib/Catch2/src/: cmake_install.cmake
tests/: SpaceShip_Tester.cpp  Tester.cpp
tests/arch/: Dockerfile
tests/debian/: Dockerfile
tests/fedora/: Dockerfile
